cycles matlib file crashes #40482

Closed
opened 2014-06-03 15:01:32 +02:00 by Brendon Murphy · 12 comments
Member

System Information
all

Blender Version
Broken: now)
Worked: (very early cycles dev)

Crash on render

open file, press f12

download from here:
http://www.blendswap.com/blends/view/56470
http://www.blendswap.com/blends/view/65460

both files have significant d/l on blendswap.

In the likely case some materials settings are depreciated/void, please let me know which materials need to be removed.

**System Information** all **Blender Version** Broken: now) Worked: (very early cycles dev) **Crash on render** **open file, press f12** download from here: http://www.blendswap.com/blends/view/56470 http://www.blendswap.com/blends/view/65460 both files have significant d/l on blendswap. In the likely case some materials settings are depreciated/void, please let me know which materials need to be removed.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Thomas Dinges was assigned by Brendon Murphy 2014-06-03 15:01:32 +02:00
Author
Member

Added subscriber: @BrendonMurphy

Added subscriber: @BrendonMurphy

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion
No description provided.

Removed subscriber: @MarcClintDion

Removed subscriber: @MarcClintDion

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

@brecht, it's possible that runtime optimizer would call get_attribute with NULL renderstate. As per documentation, we might simply add check to OSLRenderServices::get_attribute and return false if renderstate is NULL. In worst case scenario seems we'll just miss some possible optimization.

But i'm also wondering, how correct it'll be to use OSLRenderServices::kernel_globals instead of ShaderData::osl_globals in cases renderstate is NULL.Don't really see difference between returning false and trying to use kernel_globals with the files attached here.

@brecht, it's possible that runtime optimizer would call `get_attribute` with NULL renderstate. As per documentation, we might simply add check to `OSLRenderServices::get_attribute` and return `false` if renderstate is NULL. In worst case scenario seems we'll just miss some possible optimization. But i'm also wondering, how correct it'll be to use `OSLRenderServices::kernel_globals` instead of `ShaderData::osl_globals` in cases renderstate is NULL.Don't really see difference between returning false and trying to use kernel_globals with the files attached here.

Forgot to attach two possible patches.

First one seems somewhat safer for the release.

Forgot to attach two possible patches. - http://www.pasteall.org/52032/diff - http://www.pasteall.org/52031/diff First one seems somewhat safer for the release.

It's best to return NULL for now. Attributes are only set up for the kernel to read after shader compilation.

If we want to take advantage of this optimization some bigger changes are needed, and I don't think this optimization is very important at the moment.

It's best to return NULL for now. Attributes are only set up for the kernel to read after shader compilation. If we want to take advantage of this optimization some bigger changes are needed, and I don't think this optimization is very important at the moment.

This issue was referenced by dc2daf7a67

This issue was referenced by dc2daf7a6786110a77cebc5ad8ea7a118d156d61

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit dc2daf7a67.

Closed by commit dc2daf7a67.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40482
No description provided.